# BMSTU_works

./: 3.cpp  8.cpp  README.md  doc.txt  main.cpp
2_seminar/: 6.cpp  7.cpp  9.cpp
3_seminar/: geometry_tasks.cpp
4_seminar/: 4_seminar.cpp
Exam/: 1
Exam/1 sem/: .gitignore  CMakeLists.txt  README.md  database_connection.h  order_item.h  payment.h  payment_strategy.h
Exam/1 sem/include/: admin.h  customer.h  database_connection.h  manager.h  order.h  product.h  user.h
Exam/1 sem/sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
Exam/1 sem/src/: main.cpp
Home_tasks/10_seminar/: 10_seminar.cpp
Home_tasks/11_seminar/: 11_seminar.cpp
Home_tasks/12_seminar/: seminar_12(очереди).cpp  seminar_12(структуры и объединения).cpp
Home_tasks/13_seminar/: 13_seminar.cpp
Home_tasks/2_seminar/: 1.cpp  10.cpp  11.cpp  2.cpp  4.cpp  5.cpp
Home_tasks/3_seminar/: 3_ seminar.cpp  geometry_tasks.cpp
Home_tasks/5_seminar/: 5_seminar.cpp
Home_tasks/6_seminar/: 6_seminar.cpp
Home_tasks/7_seminar/: 7_seminar.cpp
Home_tasks/8_seminar/: 8_seminar.cpp
Home_tasks/9_seminar/: 9_seminar.cpp
Home_tasks/DZ_2/: Dz_2 (4 variant).cpp
Lab_works/Infa/laba_2/: check_process.sh  countdown.sh  server.sh  sum_numbers.sh  text_editor.sh
Lab_works/Infa/laba_3/: order_management.sql
Lab_works/OAiP/laba_2/: OAiP2_1.cpp
Lab_works/OAiP/laba_3/: OAiP_3.cpp
Lab_works/OAiP/laba_4/: database_sales.cpp  sales_db.sql
RK/RK_2/: Zadacha_1.sql  zadacha_2.cpp
